@@ -1,17 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="ch.amana.android.cputuner"
-	android:versionName="@string/version" android:installLocation="internalOnly"
-	xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="201109260">
+<manifest
+	package="ch.amana.android.cputuner"
+	android:versionName="@string/version"
+	android:installLocation="internalOnly"
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:versionCode="201109260"
+>
 	<uses-permission android:name="android.permission.VIBRATE"></uses-permission>
 	<uses-permission android:name="com.android.vending.BILLING"></uses-permission>
-	<permission android:name="ch.amana.android.cputuner.LOAD_CONFIGURATION"
-		android:protectionLevel="dangerous"></permission>
+	<permission
+		android:name="ch.amana.android.cputuner.LOAD_CONFIGURATION"
+		android:protectionLevel="dangerous"
+	></permission>
 
-	<application android:icon="@drawable/icon" android:label="@string/app_name"
+	<application
+		android:icon="@drawable/icon"
+		android:label="@string/app_name"
 		android:name=".application.CpuTunerApplication"
-		android:allowClearUserData="true" android:allowBackup="true"
-		android:backupAgent="ch.amana.android.cputuner.helper.CpuTunerBackupAgent">
-		<meta-data android:name="com.google.android.backup.api_key"
+		android:allowClearUserData="true"
+		android:allowBackup="true"
+		android:backupAgent="ch.amana.android.cputuner.helper.CpuTunerBackupAgent"
+	>
+		<meta-data
+			android:name="com.google.android.backup.api_key"
 			android:value="AEdPqrEAAAAINQCJA85hmMYm3sbqv9ypn7fLMp6KwDmc5_IO-A" />
 
 		<receiver android:name=".receiver.BootReceiver">
@@ -29,9 +40,14 @@
 			</intent-filter>
 		</service>
 
-		<activity android:name=".view.activity.ProfileEditor" android:theme="@android:style/Theme.Black.NoTitleBar" android:configChanges="orientation">
+		<activity
+			android:name=".view.activity.ProfileEditor"
+			android:theme="@android:style/Theme.Black.NoTitleBar"
+			android:configChanges="orientation"
+		>
 			<intent-filter>
 				<action android:name="android.intent.action.EDIT"></action>
+				<action android:name="ch.amana.android.cputuner.ACTION_INSERT_AS_NEW"></action>
 				<data android:mimeType="vnd.android.cursor.item/ch.amana.android.cputuner.cpuProfile"></data>
 				<category android:name="android.intent.category.DEFAULT"></category>
 			</intent-filter>
@@ -65,29 +81,41 @@
 				<action android:name="android.net.wifi.STATE_CHANGE"></action>
 			</intent-filter>
 		</receiver>
-		<activity android:name=".view.activity.CpuTunerViewpagerActivity" android:theme="@android:style/Theme.Black.NoTitleBar" android:configChanges="orientation">
+		<activity
+			android:name=".view.activity.CpuTunerViewpagerActivity"
+			android:theme="@android:style/Theme.Black.NoTitleBar"
+			android:configChanges="orientation"
+		>
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
 		<activity android:name=".view.preference.SettingsPreferenceActivity"></activity>
-		<activity android:name=".view.activity.TriggerEditor" android:theme="@android:style/Theme.Black.NoTitleBar">
-			<intent-filter>
-				<action android:name="android.intent.action.EDIT"></action>
-				<data android:mimeType="vnd.android.cursor.item/ch.amana.android.cputuner.trigger"></data>
-				<category android:name="android.intent.category.DEFAULT"></category>
-			</intent-filter>
+		<activity
+			android:name=".view.activity.TriggerEditor"
+			android:theme="@android:style/Theme.Black.NoTitleBar"
+		>
 			<intent-filter>
 				<action android:name="android.intent.action.INSERT"></action>
 				<data android:mimeType="vnd.android.cursor.dir/ch.amana.android.cputuner.trigger"></data>
 				<category android:name="android.intent.category.DEFAULT"></category>
 			</intent-filter>
+			<intent-filter>
+				<action android:name="ch.amana.android.cputuner.ACTION_INSERT_AS_NEW"></action>
+				<action android:name="android.intent.action.EDIT"></action>
+				<data android:mimeType="vnd.android.cursor.item/ch.amana.android.cputuner.trigger"></data>
+				<category android:name="android.intent.category.DEFAULT"></category>
+			</intent-filter>
 		</activity>
-		<provider android:name=".provider.CpuTunerProvider"
-			android:authorities="ch.amana.android.cputuner"></provider>
-		<activity android:configChanges="orientation"
-			android:name=".view.preference.CapabilityCheckerActivity"></activity>
+		<provider
+			android:name=".provider.CpuTunerProvider"
+			android:authorities="ch.amana.android.cputuner"
+		></provider>
+		<activity
+			android:configChanges="orientation"
+			android:name=".view.preference.CapabilityCheckerActivity"
+		></activity>
 		<activity android:name=".view.activity.HelpActivity"></activity>
 		<activity android:name=".view.preference.SendReportActivity"></activity>
 		<activity android:name=".view.preference.FindFrequenciesActivity"></activity>
@@ -97,17 +125,23 @@
 				<action android:name="ch.amana.android.cputuner.ACTION_PULSE"></action>
 			</intent-filter>
 		</service>
-		<activity android:name=".view.activity.VirtualGovernorEditorActivity" android:theme="@android:style/Theme.Black.NoTitleBar">
+		<activity
+			android:name=".view.activity.VirtualGovernorEditorActivity"
+			android:theme="@android:style/Theme.Black.NoTitleBar"
+		>
 			<intent-filter>
+				<action android:name="ch.amana.android.cputuner.ACTION_INSERT_AS_NEW"></action>
 				<action android:name="android.intent.action.EDIT"></action>
 				<data
-					android:mimeType="vnd.android.cursor.item/ch.amana.android.cputuner.virtualGovernor"></data>
+					android:mimeType="vnd.android.cursor.item/ch.amana.android.cputuner.virtualGovernor"
+				></data>
 				<category android:name="android.intent.category.DEFAULT"></category>
 			</intent-filter>
 			<intent-filter>
 				<action android:name="android.intent.action.INSERT"></action>
 				<data
-					android:mimeType="vnd.android.cursor.dir/ch.amana.android.cputuner.virtualGovernor"></data>
+					android:mimeType="vnd.android.cursor.dir/ch.amana.android.cputuner.virtualGovernor"
+				></data>
 				<category android:name="android.intent.category.DEFAULT"></category>
 			</intent-filter>
 		</activity>
@@ -117,13 +151,15 @@
 			<intent-filter>
 				<action android:name="android.intent.action.INSERT"></action>
 				<data
-					android:mimeType="vnd.android.cursor.dir/ch.amana.android.cputuner.configurationAutoload"></data>
+					android:mimeType="vnd.android.cursor.dir/ch.amana.android.cputuner.configurationAutoload"
+				></data>
 				<category android:name="android.intent.category.DEFAULT"></category>
 			</intent-filter>
 			<intent-filter>
 				<action android:name="android.intent.action.EDIT"></action>
 				<data
-					android:mimeType="vnd.android.cursor.item/ch.amana.android.cputuner.configurationAutoload"></data>
+					android:mimeType="vnd.android.cursor.item/ch.amana.android.cputuner.configurationAutoload"
+				></data>
 				<category android:name="android.intent.category.DEFAULT"></category>
 			</intent-filter>
 		</activity>
@@ -133,52 +169,78 @@
 			</intent-filter>
 		</service>
 		<activity android:name=".view.preference.ChangelogActivity"></activity>
-		<activity android:name=".service.ConfigurationLoadServiceActivity"
-			android:permission="ch.amana.android.cputuner.LOAD_CONFIGURATION">
+		<activity
+			android:name=".service.ConfigurationLoadServiceActivity"
+			android:permission="ch.amana.android.cputuner.LOAD_CONFIGURATION"
+		>
 			<intent-filter>
 				<action android:name="ch.amana.android.cputuner.LOAD_CONFIG"></action>
 				<category android:name="android.intent.category.DEFAULT"></category>
 			</intent-filter>
 		</activity>
 	</application>
-	<uses-sdk android:minSdkVersion="7" android:targetSdkVersion="8" />
+	<uses-sdk
+		android:minSdkVersion="7"
+		android:targetSdkVersion="8" />
 
-	<supports-screens android:largeScreens="true"
-		android:normalScreens="true" android:smallScreens="true"
+	<supports-screens
+		android:largeScreens="true"
+		android:normalScreens="true"
+		android:smallScreens="true"
 		android:anyDensity="true" />
 	<uses-permission android:name="android.permission.WRITE_SETTINGS" />
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"></uses-permission>
-	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE"
-		android:required="false"></uses-permission>
-	<uses-feature android:name="android.hardware.wifi"
-		android:required="false"></uses-feature>
-	<uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS"
+	<uses-permission
+		android:name="android.permission.CHANGE_WIFI_STATE"
+		android:required="false"
+	></uses-permission>
+	<uses-feature
+		android:name="android.hardware.wifi"
+		android:required="false"
+	></uses-feature>
+	<uses-permission
+		android:name="android.permission.WRITE_SECURE_SETTINGS"
 		android:required="false" />
-	<uses-permission android:name="android.permission.READ_SECURE_SETTINGS"
+	<uses-permission
+		android:name="android.permission.READ_SECURE_SETTINGS"
 		android:required="false" />
-	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN"
-		android:required="false"></uses-permission>
-	<uses-feature android:name="android.hardware.bluetooth"
+	<uses-permission
+		android:name="android.permission.BLUETOOTH_ADMIN"
+		android:required="false"
+	></uses-permission>
+	<uses-feature
+		android:name="android.hardware.bluetooth"
 		android:required="false" />
-	<uses-feature android:name="android.hardware.location.gps"
+	<uses-feature
+		android:name="android.hardware.location.gps"
 		android:required="false" />
 
-	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"
-		android:required="false"></uses-permission>
+	<uses-permission
+		android:name="android.permission.ACCESS_WIFI_STATE"
+		android:required="false"
+	></uses-permission>
 	<uses-permission android:name="android.permission.REBOOT"></uses-permission>
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
-	<uses-permission android:name="com.android.phone.CHANGE_NETWORK_MODE"
-		android:required="false"></uses-permission>
+	<uses-permission
+		android:name="com.android.phone.CHANGE_NETWORK_MODE"
+		android:required="false"
+	></uses-permission>
 	<uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS"></uses-permission>
 	<uses-permission android:name="android.permission.READ_SYNC_SETTINGS"></uses-permission>
-	<uses-permission android:name="android.permission.BLUETOOTH"
-		android:required="false"></uses-permission>
+	<uses-permission
+		android:name="android.permission.BLUETOOTH"
+		android:required="false"
+	></uses-permission>
 	<uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
 	<uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
-	<uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"
-		android:required="false"></uses-permission>
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"
-		android:required="false"></uses-permission>
+	<uses-permission
+		android:name="android.permission.CHANGE_NETWORK_STATE"
+		android:required="false"
+	></uses-permission>
+	<uses-permission
+		android:name="android.permission.ACCESS_NETWORK_STATE"
+		android:required="false"
+	></uses-permission>
 
 
 </manifest> 
