@@ -38,6 +38,7 @@ import ch.amana.android.cputuner.hw.PowerProfiles;
 import ch.amana.android.cputuner.model.ModelAccess;
 import ch.amana.android.cputuner.model.ProfileModel;
 import ch.amana.android.cputuner.model.VirtualGovernorModel;
+import ch.amana.android.cputuner.provider.CpuTunerProvider;
 import ch.amana.android.cputuner.provider.db.DB;
 import ch.amana.android.cputuner.provider.db.DB.CpuProfile;
 import ch.amana.android.cputuner.provider.db.DB.VirtualGovernor;
@@ -370,6 +371,10 @@ public class ProfilesListFragment extends PagerListFragment {
 
 		case R.id.menuItemEdit:
 			startActivity(new Intent(Intent.ACTION_EDIT, uri));
+			return true;
+
+		case R.id.menuItemInsertAsNew:
+			startActivity(new Intent(CpuTunerProvider.ACTION_INSERT_AS_NEW, uri));
 			return true;
 
 		default:
