@@ -31,6 +31,7 @@ import ch.amana.android.cputuner.helper.Logger;
 import ch.amana.android.cputuner.helper.SettingsStorage;
 import ch.amana.android.cputuner.hw.PowerProfiles;
 import ch.amana.android.cputuner.model.ModelAccess;
+import ch.amana.android.cputuner.provider.CpuTunerProvider;
 import ch.amana.android.cputuner.provider.db.DB;
 import ch.amana.android.cputuner.provider.db.DB.VirtualGovernor;
 import ch.amana.android.cputuner.view.activity.HelpActivity;
@@ -160,6 +161,10 @@ public class VirtualGovernorListFragment extends PagerListFragment {
 
 		case R.id.menuItemEdit:
 			startActivity(new Intent(Intent.ACTION_EDIT, uri));
+			return true;
+
+		case R.id.menuItemInsertAsNew:
+			startActivity(new Intent(CpuTunerProvider.ACTION_INSERT_AS_NEW, uri));
 			return true;
 		}
 
